# In-Memory-Analytics-with-Apache-Arrow-Second-Edition

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  README.md
chapter1/cpp/: build.sh  examples.cc
chapter1/go/: go.mod  main.go
chapter1/python/: examples.py
chapter2/cpp/: build.sh  json_reader.cc
chapter2/go/: go.mod  go.sum  main.go
chapter3/go/: go.mod  go.sum  main.go
chapter3/python/: generate_files.py  memory_usage.py
chapter4/cpp/: CMakeLists.txt  example_cdata.cc  example_with_cuda.cc
chapter4/go/: build.sh  example_go_cffi.py  example_stream.py  go.mod  go.sum  sample.go
chapter4/python/: example_cdata.py
chapter5/cpp/: build.sh  compute_functions.cc  compute_or_not.cc  simple_acero.cc  timer.h
chapter5/go/: go.mod  go.sum  main.go
chapter5/python/: compute_functions.py
chapter6/cpp/: build.sh  datasets_api.cc  s3_datasets.cc  streaming_engine.cc  write_partitioned.cc
chapter7/go/: go.mod  go.sum  main.go
chapter7/python/: flight_server.py
chapter8/cpp/: CMakeLists.txt  adbc_driver_manager.cc  adbc_postgres.cc  adbc_sqlite.cc  helpers.h
chapter8/go/: go.mod  go.sum  main.go
chapter8/python/: adbc_duckdb.py  adbc_example.py  adbc_sqlite.py
chapter9/: chapter9.ipynb
sample_data/: .gitattributes  sliced.csv  starwars.parquet  yellow_tripdata_2015-01.csv  yellow_tripdata_2015-01.parquet
